fix: resolve deprecated use of Locale